--- a/pages/panel.pug
+++ b/pages/panel.pug
@@ -78,4 +78,5 @@ script.
   var chartDisk = new Chart("chart-3", opts4);
   $(".list-group-item").click((e) => {
     setPresentation(e.currentTarget.dataset.text);
+    window.open("/admint/view/presentation");
   })
