--- a/pages/css/presNC.css
+++ b/pages/css/presNC.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
     width: 100vw;
     height: 100vh;
-    background: radial-gradient(#888888, #555555)
+    background: linear-gradient(#888888, #555555)
 }
 
 div{
